# react-vite-fastapi-starter

./: CLAUDE.md  README.md  pyproject.toml
backend/: .env.example  requirements.txt
backend/app/: main.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
